Organized, fixed a few minor layout issues, added header

--- a/src/main.css
+++ b/src/main.css
@@ -1,16 +1,67 @@
+div {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0px;
   padding: 0px;
 
   font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace;
-  background-color: #fafafa;
+  background-color: #ffffff;
 }
 
-main {
+#header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+
+  width: 100%;
+  height: 3.5rem;
+  font-size: 1rem;
+  padding: 1rem;
+
+  border-bottom: 1px solid #dbdbdb;
+  background-color: #ffffff;
+}
+
+#header-left-text {
+  vertical-align: center;
+  float: left;
+}
+
+#header-logo {
+  height: 4rem;
+  width: 4rem;
+}
+
+#header-right-text {
+  float: right;
+  font-size: 0.75rem;
+  color: grey;
+  text-align: right;
+}
+
+#main-scrollable {
+  position: fixed;
+  top: 3.5rem;
+  left: 0;
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+
+  background-color: #fafafa; /* slight grey*/
+}
+
+#main-gutters {
   margin-left: 1rem;
   margin-right: 1rem;
-  margin-top: 1rem;
   width: calc(100vw - 2rem);
+
+  margin-top: 1rem;
+  height: 100%;
 }
 
 #pane-wrapper {
@@ -99,7 +150,7 @@ main {
 }
 
 #content-pane-bottom-spacer {
-  height: 2rem;
+  height: 3rem;
 }
 
 /* DESKTOP MEDIA QUERY */
@@ -108,11 +159,8 @@ main {
     overflow: hidden;
   }
 
-  main {
-    margin-left: 3rem;
-    margin-right: 3rem;
-    margin-top: 3rem;
-    width: calc(100vw - 6rem);
+  #main-scrollable {
+    overflow: hidden; /* LOL scrollable my ass */
   }
 
   #map-pane {
